Fixed queue list rows from being cut off at smaller screen sizes.

--- a/app/admin/queue/queue.less
+++ b/app/admin/queue/queue.less
@@ -85,7 +85,13 @@
         }
 
         .list {
-            height: calc(~"100% - 232px");
+            height: calc(~"100% - 239px");
+        }
+
+        .list .table {
+
+            margin-bottom: 0;
+            overflow: hidden;
         }
 
         .list .table > tbody tr > td {
@@ -94,6 +100,7 @@
             color: black;
             vertical-align: middle;
             font-size: @queue-list-font-size;
+            line-height: 16px;
             padding: 6px;
             font-weight: 500;
 
